# motion_editor

./: .gitignore  README  README.md
flor_motion/: .gitignore  .pydevproject  CMakeLists.txt  package.xml  setup.py
flor_motion/config/: motion_editor_thor_config.xml
flor_motion/data/__atlas_motions/: babycrawl.py  babycrawl_one_step_final.py  babycrawl_two_steps.py  back_from_sit.py  crawl_back.py  crawl_back_01.py  crawl_back_final.py  crawl_back_frog_sk_1.py  crawl_back_mud.py  crawl_back_obstacles.py  crawl_forward.py  crawl_forward_mud.py  crawl_left.py  crawl_turn_left.py  demo_2.py  drive_car_only_lift_arm.py  drive_car_pedal_left_empty.py  drive_car_pedal_left_full.py  drive_car_pedal_middle_empty.py  drive_car_pedal_right_half.py  drive_car_pull_right.py  extend_feet.py  get_in_car_entry.py  get_in_car_entry_bkp.py  get_in_car_push_back_right.py  get_up_from_back.py  get_up_from_back_2.py  get_up_from_back_7.py  get_up_from_sit.py  get_up_from_sit_part1_deep_grass.py  get_up_from_sit_part2.py  ladder_kneel_2.py  ladder_kneel_2_right.py  ladder_left_leg_up.py  ladder_move_up.py  null.py  roll_onto_back_over_left.py  roll_onto_back_over_left_no_null.py  roll_onto_back_over_right.py  roll_onto_face_over_right_no_null.py  (+17 more)
flor_motion/data/_atlas_positions/arm/: STAND_default.py  arm_back_frog_sk_1.py  babycrawl_extend.py  babycrawl_push2.py  babycrawl_push_frw2.py  back_2.py  back_up.py  bc_big_step.py  calib_1.py  calib_10.py  calib_11.py  calib_12.py  calib_13.py  calib_14.py  calib_15.py  calib_16.py  calib_17.py  calib_18.py  calib_2.py  calib_22.py  calib_23.py  calib_4.py  calib_7.py  calib_8.py  crawl_back.py  crawl_front_2.py  down.py  (+164 more)
flor_motion/data/motions/: cebit_greet.py  cebit_greet_left.py  cebit_greet_right.py  cebit_greet_right_w_o_ready.py  cebit_greet_w_handshake.py  cebit_greet_w_head.py  cebit_handshake.py  cebit_muscle.py  cebit_pose_drill.py  cebit_ready_state.py  cebit_weight_lift.py  cebit_weight_ready.py  cinder.py  high_step.py  high_step_romay.py  high_step_romay_bkp.py  pack_motion.py  pack_motion_1.py  ready_state.py  squat.py  stand.py  stand_up_albert.py  stand_up_complete.py  stand_up_martin.py
flor_motion/msg/: ExecuteMotionCommand.msg
flor_motion/scripts/: kinematic_trajectory_controller  motion_service
flor_motion/src/flor_motion/: data_dict.py  joint_configuration.py  kinematic_trajectory_controller.py  motion_data.py  motion_publisher.py  motion_service.py  position_data.py  robot_config.py
flor_motion/srv/: ExecuteMotion.srv
motion_editor_core/: CMakeLists.txt  package.xml  setup.py
motion_editor_core/action/: ExecuteMotion.action
motion_editor_core/config/: argo_config.xml  atlas_config.xml  johnny5_config.xml  motion_editor_thor_config.xml  thor3_config.xml  thor_config.xml  thor_with_ghost_config.xml  tracker_config.xml
motion_editor_core/data/: position_data.py
motion_editor_core/data/motions/: cebit_low_stand.py  high_step_dorian.py  stand_up.py  test_3.py  test_motion.py
motion_editor_core/launch/: atlas_motion_service.launch  johnny5_motion_service.launch  kinematic_traj_controller.launch  motion_service.launch  thor3_motion_service.launch  thor_kinematic_traj_controller.launch  thor_motion_service.launch
motion_editor_core/scripts/: kinematic_trajectory_controller  motion_service
motion_editor_core/src/motion_editor_core/: data_dict.py  joint_configuration.py  kinematic_trajectory_controller.py  motion_data.py  motion_publisher.py  motion_service.py  position_data.py  robot_config.py
motion_editor_core/srv/: ExecuteMotion.srv
rqt_motion_editor/: .gitignore  CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_motion_editor/launch/: argo_motion_editor.launch  atlas_motion_editor.launch  johnny5_motion_editor.launch  motion_editor.launch  motion_editor_with_ghost_robot.launch  motion_editor_with_ocs.launch  motion_editor_with_rviz.launch  thor3_motion_editor.launch  thor_motion_editor.launch  thor_motion_editor_with_ghost.launch  tracker_motion_editor.launch
rqt_motion_editor/rviz/: rviz_with_ghost.rviz
rqt_motion_editor/scripts/: motion_editor
rqt_motion_editor/src/rqt_motion_editor/: input_output_selector.ui  input_output_selector_widget.py  motion_editor.py  motion_editor.ui  motion_editor_widget.py  position_editor_widget.py  timeline_widget.py
(+935 files in other folders)
