<?xml version="1.0"?>
<package>
  <name>motion_editor_core</name>
  <version>0.0.0</version>
  <description>The motion_editor_core package provides a service to execution complex motions</description>

  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>
  
  <author email="oehler@sim.tu-darmstadt.de">Martin Oehler</author>
  <author email="scholz@sim.tu-darmstadt.de">Dorian Scholz</author>
  
  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-catkin-pkg</buildtool_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
  
</package>
